@@ -3,62 +3,35 @@ AM_LDFLAGS = $(LDFLAGS) -module -avoid-version -L$(FASTJETLIBPATH)
 LIBS = -lCDFConesPlugin -lSISConePlugin -lsiscone -lJadePlugin
 lib_LTLIBRARIES =
 
-
 noinst_LTLIBRARIES = libRivetAnalysisTools.la
 libRivetAnalysisTools_la_SOURCES = \
     MC_JetAnalysis.cc
 
-
+## ANALYSIS CATEGORIES
+##
 ## Unvalidated analyses: add new standard analyses here, and only
 ## move them into the collider-specific standard plugin libraries
 ## once they have been finished and checked. The --enable-unvalidated
-## flag is needed to install the RivetUnvalidated library.
-if ENABLE_UNVALIDATED
-lib_LTLIBRARIES += RivetUnvalidated.la
-RivetUnvalidated_la_SOURCES = \
-    ATLAS_2010_CONF_2010_049.cc \
-    CDF_1991_S2313472.cc \
-    CDF_1993_S2742446.cc \
-    CDF_1996_S3108457.cc \
-    CDF_1996_S3349578.cc \
-    CDF_1997_S3541940.cc \
-    CDF_2008_S7541902.cc \
-    CDF_2008_S7782535.cc \
-    D0_1996_S3214044.cc \
-    D0_1996_S3324664.cc \
-    D0_1998_S3711838.cc \
-    DELPHI_2003_WUD_03_11.cc \
-    E735_1998_S3905616.cc \
-    H1_1995_S3167097.cc \
-    MC_DIJET.cc \
-    MC_PHOTONJETUE.cc \
-    MC_TTBAR.cc \
-    OPAL_1993_S2692198.cc \
-    SFM_1984_S1178091.cc \
-    STAR_2008_S7869363.cc \
-    STAR_2008_S7993412.cc \
-    LHCB_2010_S8758301.cc \
-    ZEUS_2001_S4815815.cc
-endif
-
-
+## flag is needed to install the unvalidated analyses.
+##
 ## Preliminary analyses: validated analyses whose experimental paper has not
 ## been fully accepted for publication should go here. Analyses in this group
 ## are considered safe to use but the reference data may yet change. In
-## progressing from the preliminary analyses library to a permanent published
-## analyses collection, the analysis name is likely to change, so you should
-## ensure that any Rivet-using scripts are not broken by such name changes
-## when upgrading between Rivet versions. These analyses will not be available
-## if Rivet is built with the --disable-preliminary configure flag.
-if ENABLE_PRELIMINARY
-lib_LTLIBRARIES += RivetPreliminary.la
-RivetPreliminary_la_SOURCES = \
-    CDF_2008_LEADINGJETS.cc \
-    CDF_2008_NOTE_9351.cc \
-    CDF_2009_NOTE_9936.cc \
-    DELPHI_2002_069_CONF_603.cc \
-    STAR_2009_UE_HELEN.cc
-endif
+## progressing from preliminary status to a permanent published analyses
+## collection, the analysis name is very likely to change, so you should ensure
+## that any Rivet-using scripts are not broken by such name changes when
+## upgrading between Rivet versions. These analyses will not be available if
+## Rivet is built with the --disable-preliminary configure flag.
+##
+## Obsolete analyses: as mentioned above, when a preliminary analysis becomes
+## permanent its name will change to reflect its newly published status via the
+## publication's SPIRES ID. The previous form of the analysis, possibly with
+## different reference histograms, will be retained for one major version of
+## Rivet with a status of "obsolete" before being removed, to give users time to
+## migrate their run scripts, i.e. if an analysis is marked as obsolete in
+## version 1.4.2, it will remain in Rivet's distribution until version
+## 1.5.0. Obsolete analyses will not be available if Rivet is built with the
+## --disable-obsolete configure flag.
 
 
 lib_LTLIBRARIES += RivetALICEAnalyses.la
@@ -78,11 +51,23 @@ RivetATLASAnalyses_la_SOURCES = \
     ATLAS_2010_S8919674.cc \
     ATLAS_2011_S8924791.cc \
     ATLAS_2011_S8971293.cc
+if ENABLE_UNVALIDATED
+RivetATLASAnalyses_la_SOURCES += \
+    ATLAS_2010_CONF_2010_049.cc
+endif
 
 
 lib_LTLIBRARIES += RivetCMSAnalyses.la
 RivetCMSAnalyses_la_SOURCES = \
     CMS_2011_S8957746.cc
+
+
+lib_LTLIBRARIES += RivetLHCbAnalyses.la
+RivetLHCbAnalyses_la_SOURCES =
+if ENABLE_UNVALIDATED
+RivetLHCbAnalyses_la_SOURCES += \
+    LHCB_2010_S8758301.cc
+endif
 
 
 lib_LTLIBRARIES += RivetCDFAnalyses.la
@@ -113,6 +98,25 @@ RivetCDFAnalyses_la_SOURCES = \
     CDF_2009_S8436959.cc \
     CDF_2010_S8591881_DY.cc \
     CDF_2010_S8591881_QCD.cc
+if ENABLE_PRELIMINARY
+RivetCDFAnalyses_la_SOURCES += \
+    CDF_2009_NOTE_9936.cc
+endif
+if ENABLE_OBSOLETE
+RivetCDFAnalyses_la_SOURCES += \
+    CDF_2008_LEADINGJETS.cc \
+    CDF_2008_NOTE_9351.cc
+endif
+if ENABLE_UNVALIDATED
+RivetCDFAnalyses_la_SOURCES += \
+    CDF_1991_S2313472.cc \
+    CDF_1993_S2742446.cc \
+    CDF_1996_S3108457.cc \
+    CDF_1996_S3349578.cc \
+    CDF_1997_S3541940.cc \
+    CDF_2008_S7541902.cc \
+    CDF_2008_S7782535.cc
+endif
 
 
 lib_LTLIBRARIES += RivetD0Analyses.la
@@ -135,12 +139,23 @@ RivetD0Analyses_la_SOURCES = \
     D0_2010_S8570965.cc \
     D0_2010_S8671338.cc \
     D0_2010_S8821313.cc
+if ENABLE_UNVALIDATED
+RivetD0Analyses_la_SOURCES += \
+    D0_1996_S3214044.cc \
+    D0_1996_S3324664.cc \
+    D0_1998_S3711838.cc
+endif
 
 
 lib_LTLIBRARIES += RivetHERAAnalyses.la
 RivetHERAAnalyses_la_SOURCES = \
     H1_1994_S2919893.cc \
     H1_2000_S4129130.cc
+if ENABLE_UNVALIDATED
+RivetHERAAnalyses_la_SOURCES += \
+    H1_1995_S3167097.cc \
+    ZEUS_2001_S4815815.cc
+endif
 
 
 lib_LTLIBRARIES += RivetLEPAnalyses.la
@@ -154,6 +169,15 @@ RivetLEPAnalyses_la_SOURCES = \
     OPAL_1998_S3780481.cc \
     OPAL_2001_S4553896.cc \
     OPAL_2004_S6132243.cc
+if ENABLE_PRELIMINARY
+RivetLEPAnalyses_la_SOURCES += \
+    DELPHI_2002_069_CONF_603.cc
+endif
+if ENABLE_UNVALIDATED
+RivetLEPAnalyses_la_SOURCES += \
+    DELPHI_2003_WUD_03_11.cc \
+    OPAL_1993_S2692198.cc
+endif
 
 
 lib_LTLIBRARIES += RivetRHICAnalyses.la
@@ -161,6 +185,15 @@ RivetRHICAnalyses_la_SOURCES = \
     STAR_2006_S6500200.cc \
     STAR_2006_S6860818.cc \
     STAR_2006_S6870392.cc
+if ENABLE_PRELIMINARY
+RivetRHICAnalyses_la_SOURCES += \
+    STAR_2009_UE_HELEN.cc
+endif
+if ENABLE_UNVALIDATED
+RivetRHICAnalyses_la_SOURCES += \
+    STAR_2008_S7869363.cc \
+    STAR_2008_S7993412.cc
+endif
 
 
 lib_LTLIBRARIES += RivetSPSAnalyses.la
@@ -179,6 +212,11 @@ RivetMiscAnalyses_la_SOURCES = \
     PDG_Hadron_Multiplicities_Ratios.cc \
     JADE_OPAL_2000_S4300807.cc \
     BELLE_2006_S6265367.cc
+if ENABLE_UNVALIDATED
+RivetMiscAnalyses_la_SOURCES += \
+    E735_1998_S3905616.cc \
+    SFM_1984_S1178091.cc
+endif
 
 
 lib_LTLIBRARIES += RivetMCAnalyses.la
@@ -195,3 +233,9 @@ RivetMCAnalyses_la_SOURCES = \
     MC_LEADINGJETS.cc \
     MC_DIPHOTON.cc \
     MC_SUSY.cc
+if ENABLE_UNVALIDATED
+RivetMCAnalyses_la_SOURCES += \
+    MC_DIJET.cc \
+    MC_PHOTONJETUE.cc \
+    MC_TTBAR.cc
+endif
